[package]
name = "sgx-dcap-ql-sys"
version = "0.1.0"
edition = "2021"
links = "sgx_dcap_ql"

[features]
default = ["std"]
std = ["glog/std"]
tstd = ["sgxlib/tstd", "glog/tstd"]
sgx = ["sgxlib/sgx"]

[dependencies]
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }

[build-dependencies]
bindgen = { git = "https://github.com/automata-network/rust-bindgen.git", branch = "v0.59.2-log", package = "bindgen" }